# mvp

./: .gitignore  README.md  pyproject.toml
notebooks/: 00_setup_and_seed.py  01_bronze_autoloader.py  02_silver_transform.py  03_gold_recommendations.py  99_demo.py
scripts/: run_local_e2e.py  run_spark_e2e.py
src/theatre_ops/: __init__.py  local_pipeline.py  recommendation_logic.py  sample_data.py  spark_pipeline.py
tests/: test_local_pipeline.py  test_recommendation_logic.py  test_sample_data.py  test_spark_pipeline.py
