[project]
name = "theatre-screen-allocation-mvp"
version = "0.1.0"
description = "Databricks MVP for theatre screen-allocation recommendations"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
